<resources>
    <string name="app_name">Enigma</string>
    <string name="atbash_cipher">Atbash Cipher</string>
    <string name="caesar_s_cipher">Caesar\'s Cipher</string>
    <string name="vigeneres_cipher">Vigenère\'s Cipher</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="type_your_message">Type your message:</string>
    <string name="result_message">Result message:</string>
    <string name="edit_text_phrase1">the day is beautiful</string>
    <string name="type_the_keyword">Type the keyword:</string>
    <string name="edit_text_phrase2">spring</string>
    <string name="offset_key">Offset Key:</string>
    <string name="clear_button">Clear</string>
    <string name="copy">Copy</string>
    <string name="rotate">Rotate</string>
    <string name="empty_input">Please, type the message you want to cipher</string>
    <string name="cleaned">Cleaned</string>
    <string name="encrypted_message">encrypted message</string>
    <string name="copied">Copied to clipboard</string>
    <string name="no_keyword">No keyword was informed</string>
    <string name="nothing_to_copy">There is nothing to copy</string>
    <string name="exit_ask">Are you sure you want to exit?</string>

    <string-array name="shift">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>Brute Force</item>
    </string-array>

</resources>
